--- a/index.html
+++ b/index.html
@@ -9,6 +9,20 @@
     <title>Book Library</title>
 </head>
 <body>
+    <div class="button form">
+        <button class="book button">New Book</button>
+        
+        <form id="add book">
+            <label for="title">Title</label>
+            <input type="text" id="title" name="title">
+            <label for="author">Author</label>
+            <input type="text" id="author" name="author">
+            <label for="pages">Pages</label>
+            <input type="text" id="pages" name="pages">
+            <label for="read">Read</label>
+            <input type="button" id="read" name="read">
+        </form>
+    </div>
     <div class="book cards">
         <div class="card">
             <p class="book title">Title: Big gains</p>
