Finish remove button

--- a/index.html
+++ b/index.html
@@ -12,31 +12,19 @@
     <div class="button form">
         <button class="book button">New Book</button>
         
-        <form id="add book">
+        <form action="" method="get" id="add book">
             <label for="title">Title</label>
             <input type="text" id="title" name="title">
             <label for="author">Author</label>
             <input type="text" id="author" name="author">
             <label for="pages">Pages</label>
             <input type="text" id="pages" name="pages">
-            <label for="read">Read</label>
-            <input type="button" id="read" name="read">
+            <input type="button" id="read" name="read" value="Read">
+            <input type="submit" value="Add Book">
         </form>
     </div>
     <div class="book cards">
-        <div class="card">
-            <p class="book title">Title: Big gains</p>
-            <p>Author: Treyce</p>
-            <p>Pages: 300</p>
-            <p>Unread</p>
-        </div>
-
-        <div class="card">
-            <p class="book title">Title: Big gains</p>
-            <p>Author: Treyce</p>
-            <p>Pages: 300</p>
-            <p>Unread</p>
-        </div>
+        
     </div>
 </body>
 </html>
